compiler/actonc/test/typeerrors/ex16.golden
Building file test/typeerrors/ex16.act
  Compiling ex16.act for development

ERROR: Error when compiling ex16 module: Type error

  |
6 |        foo.append(4)
  |        ^^^^^^^^^^
?__builtin__.list[__builtin__.int] does not have an attribute append
Hint: you may need to test if foo is not None

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

